syntax = "proto3";
option go_package = "github.com/kralicky/post-init/pkg/api";
import "github.com/kralicky/totem/totem.proto";
import "google/protobuf/empty.proto";
package api;


service Relay {
  // Server side:
  // - AgentAPIService
  // Client side:
  // - InstructionService
  rpc AgentStream(stream totem.RPC) returns (stream totem.RPC);

  // Server side:
  // - ClientAPIService
  // Client side:
  // - WatchService
  // - KeyExchangeService  
  rpc ClientStream(stream totem.RPC) returns (stream totem.RPC);
}